[project]
name = "av-env"
version = "0.1.0"
description = "Agent-powered Python environment manager built on uv"
authors = [{ name = "Your Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "langchain>=1.0.0",
  "langchain-community>=0.3.0",
  "langchain-openai>=0.2.0",
  "packaging>=24.0",
  "pydantic>=2.0.0",
  "typer>=0.15.0",
  "rich>=13.7.1",
  "tomli>=2.0.1; python_version < '3.11'"
]

[project.scripts]
av = "av.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.7.0",
  "mypy>=1.10",
  "pyinstaller>=6.11"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/av"]
